--- a/nodes/20210402_目标检测基本知识.md
+++ b/nodes/20210402_目标检测基本知识.md
@@ -543,6 +543,8 @@ def base_net():
     return torch.nn.Sequential(*blk)
 
 forward(torch.zeros((2, 3, 256, 256)), base_net()).shape
+
+# > torch.Size([2, 64, 32, 32])
 ```
 
 ### 6、完整的模型
