--- a/2_yolov4/a_csp_darknet53.ipynb
+++ b/2_yolov4/a_csp_darknet53.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "egyptian-malta",
+   "id": "09aa64a7",
    "metadata": {},
    "source": [
     "定义CSPdarknet53基本骨架网络"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "periodic-sound",
+   "id": "86fa73a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "senior-carry",
+   "id": "5f601730",
    "metadata": {},
    "source": [
     "网络架构图：\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "radical-intelligence",
+   "id": "a932a118",
    "metadata": {},
    "source": [
     "### 定义 compose 函数\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "cardiac-leather",
+   "id": "53b951f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "naked-sheffield",
+   "id": "cf8ad9ae",
    "metadata": {},
    "source": [
     "### 定义 Mish 激活函数"
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "identified-slope",
+   "id": "010c26bc",
    "metadata": {
     "tags": []
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adult-wages",
+   "id": "f5ac538a",
    "metadata": {},
    "source": [
     "### 定义DarknetConv2D\n"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "another-lottery",
+   "id": "ee5ebb8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "private-collar",
+   "id": "703e55e4",
    "metadata": {},
    "source": [
     "### 定义CBM 基本模块"
@@ -132,11 +132,11 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "closed-nickname",
+   "id": "fbbe190b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def DarknetConv2D_BN_Mish(*args, **kwargs):\n",
+    "def darknet_CBM(*args, **kwargs):\n",
     "    \"\"\"Darknet Convolution2D followed by BatchNormalization and Mish.\"\"\"\n",
     "    \n",
     "    no_bias_kwargs = {'use_bias': False}  # 没懂为啥用 no_bias\n",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "related-benchmark",
+   "id": "16de6cb4",
    "metadata": {},
    "source": [
     "### 定义 CSP 结构块"
@@ -159,38 +159,40 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "constant-black",
+   "id": "89210080",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def CSP_Block(x, num_filters, num_blocks, all_narrow=True):\n",
+    "def CSP_block(x, num_filters, num_blocks, all_narrow=True):\n",
     "    # 填充x的边界为0，由(?, 416, 416, 32)转换为(?, 417, 417, 32)。\n",
     "    # 因为下一步卷积操作的步长为2，所以图的边长需要是奇数。\n",
-    "    # 对高和宽进行压缩\n",
-    "    x = ZeroPadding2D(((1, 0), (1, 0)))(x)\n",
-    "    x = DarknetConv2D_BN_Mish(num_filters, (3,3), strides=(2,2))(x)\n",
+    "    # x = ZeroPadding2D(((1, 0), (1, 0)))(x)\n",
     "    \n",
+    "    # 第一个CBM对高和宽进行压缩\n",
+    "    x = darknet_CBM(num_filters, (3,3), strides=(2,2))(x)  # yoloz中只有卷积层，通过调节卷积步长控制输出特征图的尺寸\n",
+    "\n",
     "    # 残差\n",
-    "    x_1 = DarknetConv2D_BN_Mish(num_filters//2 if all_narrow else num_filters, (1,1))(x)\n",
+    "    x_1 = darknet_CBM(num_filters//2 if all_narrow else num_filters, (1,1))(x)\n",
     "    \n",
     "    # 主干\n",
-    "    x_2 = DarknetConv2D_BN_Mish(num_filters//2 if all_narrow else num_filters, (1,1))(x)\n",
+    "    x_2 = darknet_CBM(num_filters//2 if all_narrow else num_filters, (1,1))(x)\n",
     "    for i in range(num_blocks):\n",
     "        x_blocks = compose(\n",
-    "                DarknetConv2D_BN_Mish(num_filters//2, (1,1)),\n",
-    "                DarknetConv2D_BN_Mish(num_filters//2 if all_narrow else num_filters, (3,3)))(x_2)\n",
+    "                darknet_CBM(num_filters//2, (1,1)),\n",
+    "                darknet_CBM(num_filters//2 if all_narrow else num_filters, (3,3)))(x_2)\n",
     "        x_2 = Add()([x_2, x_blocks])\n",
-    "    x_2 = DarknetConv2D_BN_Mish(num_filters//2 if all_narrow else num_filters, (1,1))(x_2)\n",
+    "    x_2 = darknet_CBM(num_filters//2 if all_narrow else num_filters, (1,1))(x_2)\n",
     "    \n",
     "    # 主干、残差汇合\n",
     "    x = Concatenate()([x_2, x_1])\n",
+    "    x = darknet_CBM(num_filters,(1,1))(x)\n",
     "    \n",
-    "    return DarknetConv2D_BN_Mish(num_filters,(1,1))(x)"
+    "    return x"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "conventional-tennessee",
+   "id": "6776e91c",
    "metadata": {},
    "source": [
     "### 定义 CSP_darknet53 主体"
@@ -199,30 +201,41 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "decreased-processor",
+   "id": "b0222717",
    "metadata": {},
    "outputs": [],
    "source": [
     "def darknet_body(x):\n",
-    "    x = DarknetConv2D_BN_Mish(32, (3,3))(x)\n",
-    "    x = resblock_body(x, 64, 1, False)\n",
-    "    x = resblock_body(x, 128, 2)\n",
-    "    x = resblock_body(x, 256, 8)\n",
-    "    feat1 = x\n",
-    "    x = resblock_body(x, 512, 8)\n",
-    "    feat2 = x\n",
-    "    x = resblock_body(x, 1024, 4)\n",
-    "    feat3 = x\n",
+    "    x = darknet_CBM(32, (3,3))(x)\n",
+    "    x = CSP_block(x, 64, 1, False)\n",
+    "    x = CSP_block(x, 128, 2)\n",
+    "    \n",
+    "    feat1 = CSP_block(x, 256, 8)\n",
+    "    feat2 = CSP_block(feat1, 512, 8)\n",
+    "    feat3 = CSP_block(feat2, 1024, 4)\n",
+    "    \n",
     "    return feat1,feat2,feat3"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "enclosed-diagnosis",
+   "id": "e923eedf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def csp_darknet53(input_shape):\n",
+    "    x = tf.keras.Input(shape=input_shape)  # 416\n",
+    "    x = darknet_CBM(32, (3,3))(x)  # 416\n",
+    "    x = CSP_block(x, 64, 1, False)  # 208\n",
+    "    x = CSP_block(x, 128, 2)  # 104\n",
+    "    \n",
+    "    feat1 = CSP_block(x, 256, 8)  # ==>52* 52* 256\n",
+    "    feat2 = CSP_block(feat1, 512, 8)  #  ==>26* 26* 512\n",
+    "    feat3 = CSP_block(feat2, 1024, 4)  #  ==>13* 13* 1024\n",
+    "    \n",
+    "    return tf.keras.Model(inputs, [output_1, output_2, output_3], name=\"CSPDarknet53\")"
+   ]
   }
  ],
  "metadata": {
@@ -241,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
