--- a/2_yolov4/b_yolov4_neck.ipynb
+++ b/2_yolov4/b_yolov4_neck.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "26667198",
+   "id": "7cecf208",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2b0e6d10",
+   "id": "09f2b609",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8832acf",
+   "id": "af7ba448",
    "metadata": {},
    "source": [
     "### 定义CBL 基本模块"
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "69dbbd56",
+   "id": "9eb83974",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6a9e94d",
+   "id": "8153cf91",
    "metadata": {},
    "source": [
     "### 定义 yolo neck\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d57fdc0",
+   "id": "ec9a72c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "75dc85f7",
+   "id": "a51f3799",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,9 +175,9 @@
     "    maxpool1 = MaxPooling2D(pool_size=(13, 13), strides=(1, 1), padding='same')(P5)\n",
     "    maxpool2 = MaxPooling2D(pool_size=(9, 9), strides=(1, 1), padding='same')(P5)\n",
     "    maxpool3 = MaxPooling2D(pool_size=(5, 5), strides=(1, 1), padding='same')(P5)\n",
-    "    P5 = Concatenate()([maxpool1, maxpool2, maxpool3, P5])\n",
+    "    ssp = Concatenate()([maxpool1, maxpool2, maxpool3, P5])\n",
     "    # p5  CBL*3\n",
-    "    P5 = darknet_CBL(512, (1, 1))(P5)\n",
+    "    P5 = darknet_CBL(512, (1, 1))(ssp)\n",
     "    P5 = darknet_CBL(1024, (3, 3))(P5)\n",
     "    output_3 = darknet_CBL(512, (1, 1))(P5)  # 13* 13* 512\n",
     "    \n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7403314",
+   "id": "f225fd69",
    "metadata": {},
    "outputs": [],
    "source": []
