--- a/2_yolov4/c_yolov4_head.ipynb
+++ b/2_yolov4/c_yolov4_head.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "38354578",
+   "id": "b51d8767",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5172c746",
+   "id": "fb8542cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48f0c7cb",
+   "id": "a6a32e9c",
    "metadata": {},
    "source": [
     "**先验框**\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "66a0d8db",
+   "id": "3fb27eb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3a75f114",
+   "id": "e30453d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8d62c0de",
+   "id": "ed01c689",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,8 +233,8 @@
     "    \n",
     "    # p3 输出\n",
     "    P3_out = darknet_CBL(256, (3,3))(input_1)\n",
-    "    P3_out = DarknetConv2D(len(anchors[0])*(num_classes+5),(1,1))(P3_out)  # len(anchor[0]) = 3, num_classes=80，整个网络输入为(416, 416)的情况下，此时的输出为13* 13* (3*85)\n",
-    "    output_1 = Reshape( (P3.shape[1], P3.shape[2], len(anchors[0]), num_classes + 5))(P3_out)  # 13* 13* 3* 85\n",
+    "    output_1 = DarknetConv2D(len(anchors[0])*(num_classes+5),(1,1))(P3_out)  # len(anchor[0]) = 3, num_classes=80，整个网络输入为(416, 416)的情况下，此时的输出为13* 13* (3*85)\n",
+    "    output_1 = Reshape( (P3.shape[1], P3.shape[2], len(anchors[0]), num_classes + 5))(output_1)  # 13* 13* 3* 85\n",
     "    \n",
     "    # p3 下采样与 p4 实现 FPN，获得 concatenate 后的 p4\n",
     "    P3_downsample = darknet_CBL(256, (3,3), strides=(2,2))(input_1)\n",
@@ -243,8 +243,8 @@
     "    P4 = make_five_convs(P4,256)\n",
     "    # p4 输出\n",
     "    P4_out = darknet_CBL(512, (3,3))(P4)\n",
-    "    P4_out = DarknetConv2D(len(anchors[1])*(num_classes+5), (1,1))(P4_out)\n",
-    "    output_2 = Reshape( (P4.shape[1], P4.shape[2], len(anchors[1]), num_classes + 5))(P4_out)  # 26* 26* 3* 85\n",
+    "    output_2 = DarknetConv2D(len(anchors[1])*(num_classes+5), (1,1))(P4_out)\n",
+    "    output_2 = Reshape( (P4.shape[1], P4.shape[2], len(anchors[1]), num_classes + 5))(output_2)  # 26* 26* 3* 85\n",
     "    \n",
     "    \n",
     "    # p4 下采样与 p5 实现 FPN，获得 concatenate 后的 p5\n",
@@ -254,8 +254,8 @@
     "    P5 = make_five_convs(P5,512)\n",
     "    # p5输出\n",
     "    P5_out = darknet_CBL(1024, (3,3))(P5)\n",
-    "    P5_out = DarknetConv2D(len(anchors[2])*(num_classes+5), (1,1))(P5_out)\n",
-    "    output_3 = Reshape( (P5.shape[1], P5.shape[2], len(anchors[2]), num_classes + 5))(P5_out)  # 52* 52* 3* 85\n",
+    "    output_3 = DarknetConv2D(len(anchors[2])*(num_classes+5), (1,1))(P5_out)\n",
+    "    output_3 = Reshape( (P5.shape[1], P5.shape[2], len(anchors[2]), num_classes + 5))(output_3)  # 52* 52* 3* 85\n",
     "\n",
     "    # 三张特征图 output_1(13* 13* 3* 85)、output_2(26* 26* 3* 85)、output_3(52* 52* 3* 85）从上往下\n",
     "    # 是整个 yolo 输出的检测结果\n",
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b52a44e",
+   "id": "f90a3f19",
    "metadata": {},
    "outputs": [],
    "source": []
