--- a/nodes/20210405_目标检测-YOLO系列.md
+++ b/nodes/20210405_目标检测-YOLO系列.md
@@ -1,4 +1,16 @@
-# #目标检测-YOLO系列
+# 目标检测-YOLO系列
+
+# 0、Yolo算法
+
+> https://www.jianshu.com/p/86b8208f634f
+
+在Yolo算法发表之前，大部分表现比较好的对象检测（Object Detection）算法都是以 R-CNN 为代表两阶段算法，慢。
+
+Yolo算法提出一步完成预测，在一个CNN网络模型中完成图片中所有位置对象的box和类别预测，推理速度加快。
+
+其创新点：提出将输入图片进行 N*N 的栅格化（每个小单元叫 grid cell），然后将图片中某个对象的位置的预测任务交给该对象中心位置所在的 grid cell 的bounding box。在训练的过程，我们通过 grid cell 的方式告诉模型，图中对象 A 应该是由中心落在特定 grid cell 的某个范围内的某些像素组成，模型接收到这些信息就会在 grid cell 周围以一定大小范围取寻找所有满足对象 A 特征的像素，经过很多次带惩罚的尝试训练后，它就能找到这个准确的方位。
+
+![img](https://upload-images.jianshu.io/upload_images/18299912-39fa866f475846df.jpg?imageMogr2/auto-orient/strip|imageView2/2/w/1192/format/webp)
 
 # 1、Yolo v1
 
@@ -889,7 +901,7 @@ def CSP_Block(x, num_filters, num_blocks, all_narrow=True):
 
 ## 8.3 理解 Yolov3 的 anchor、置信度和类别概率
 
-> https://blog.csdn.net/weixin_43384257/article/details/100974776
+> https://www.jianshu.com/p/86b8208f634f
 
 在网络最后的输出中，对于每个grid cell产生3个bounding box。每个bounding box的输出有三类参数：
 
@@ -906,25 +918,51 @@ anchor box其实就是从训练集的所有ground truth box中统计(使用k-mea
 
 最终负责预测grid cell中对象的box的最小单元是bounding box。按照v3的设计，每个grid cell会输出 3 个参数相同的 bounding box。之前的 v2 设计中，每个grid cell只负责预测一个对象，而**v3中grid cell中的三个 bounding box 都可以预测对象**，当然他们应该对应不同的ground truth。
 
-**1、利用 anchor box 计算 bounding box**
+**利用 anchor box 计算 bounding box**
+
+> 其中，p\_{w}和p\_{h}为anchor box的宽和高，
+> t\_{w}和t\_{h}为bounding box直接预测出的宽和高
+> b\_{w}和b\_{h}为转换后预测的实际宽和高，
+>
+> 
+>
+> t\_{x}和t\_{y}是预测出的坐标
+>
+> c\_{x}和c\_{y}的坐标是(0,0) (0,1),(0,2),(0,3)…(0,13)
+> (1,0),(1,1),(1,2),(1,3)…(1,13)等等
+>
+> b\_{x}和b\_{y}为转换后预测的实际坐标
 
 
 
+![[公式]](https://www.zhihu.com/equation?tex=b_x%3D%5Csigma+%28t_x%29+%2B+c_x+%5C%5C+b_y%3D%5Csigma+%28t_y%29+%2B+c_y+%5C%5C+b_w%3Dp_we%5E%7Bt_w%7D++%5C%5C+b_h%3Dp_he%5E%7Bt_h%7D+%5C%5C)
 
+> 这里σ ( t x )为sigmoid函数，c\_{x}和c\_{y}分别为grid cell方格左上角点相对整张图片的坐标。
+>
+> 这里的sigmoid函数，是为了将t\_{x}和t\_{y}压缩到[0,1]之间。
 
+### 8.3.2 置信度（confidence）
 
+置信度是每个bounding box 输出的其中一个重要参数，作用定义有两重：一重是，代表当前 box 是否有对象![P_{r}(Object)](https://math.jianshu.com/math?formula=P_%7Br%7D(Object))，注意，这里**判断的是否是背景还是不是背景**；另一重，当当前box有对象，它预测box与物体真实的box可能的 ![IOU_{pred}^{truth}](https://math.jianshu.com/math?formula=IOU_%7Bpred%7D%5E%7Btruth%7D)的值，注意，这里**所说的物体真实的box实际是不存在的**，这只是模型表达自己框出了物体的**自信程度**。
 
+用数学形式表示置信度：
 
+![\begin{aligned} C_{i}^{j} & = P_{r}(Object) * IOU_{pred}^{truth} \end{aligned}](https://math.jianshu.com/math?formula=%5Cbegin%7Baligned%7D%20C_%7Bi%7D%5E%7Bj%7D%20%26%20%3D%20P_%7Br%7D(Object)%20*%20IOU_%7Bpred%7D%5E%7Btruth%7D%20%5Cend%7Baligned%7D)
 
+其中，![C_{i}^{j}](https://math.jianshu.com/math?formula=C_%7Bi%7D%5E%7Bj%7D)表示第 i 个grid cell的第 j 个 bounding box 的置信度
 
+那么怎么训练![C_{i}^{j}](https://math.jianshu.com/math?formula=C_%7Bi%7D%5E%7Bj%7D)
 
+> 计算先验的 anchor box 与该对象的ground truth box 的 IOU最大，那它就负责预测这个对象。此时 C_i^j = 1，其他情况下 C_i^j = 0
 
+### 8.3.3 类别概率
 
+对象条件类别概率是一组概率的数组，数组的长度为当前模型检测的类别种类数量，**它的意义是当bounding box认为当前box中有对象时，要检测的所有类别中每种类别的概率**.
 
+其实这个和分类模型最后使用softmax函数输出的一组类别概率是类似的，只是二者存在两点不同：
 
-
-
-
+1. YOLO的对象类别概率中没有background一项，也不需要，因为对background的预测已经交给置信度了，所以它的输出是有条件的，那就是在置信度表示当前box有对象的前提下，所以条件概率的数学形式为 P_r(class_i|Object)
+2. 分类模型中最后输出之前使用softmax求出每个类别的概率，也就是说各个类别之间是互斥的，而YOLOv3算法的每个类别概率是单独用逻辑回归函数(sigmoid函数)计算得出了，所以每个类别不必是互斥的，也就是说一个对象可以被预测出多个类别。
 
 
 
