--- a/2_yolov4/d_loss.ipynb
+++ b/2_yolov4/d_loss.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cb84403",
+   "id": "residential-saturn",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01c871de",
+   "id": "former-battery",
    "metadata": {},
    "source": [
     "### 1、DIOU_Loss（Distance_IOU_Loss）\n",
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b656bfd",
+   "id": "talented-premiere",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,6 +230,28 @@
     "\n",
     "        return x1, y1, x2, y2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "extensive-administration",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_obj_loss(output, obj, tobj, gt_box, batch_size, anchors,\n",
+    "                 num_classes, downsample, ignore_thresh, scale_x_y):\n",
+    "    # A prediction bbox overlap any gt_bbox over ignore_thresh,\n",
+    "        # objectness loss will be ignored, process as follows:\n",
+    "    _anchors = np.array(anchors)\n",
+    "    _anchors = np.reshape(_anchors, (-1, 2).astype(np.float32))\n",
+    "    \n",
+    "    image_size = tf.ones((batch_size, 2), dtype=tf.float32)\n",
+    "    bbox,  prob = paddle_yolo_box(output, _anchors, downsample,\n",
+    "                                     num_classes, scale_x_y, im_size, clip_bbox=False,\n",
+    "                                     conf_thresh=0.0)\n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -248,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
