--- a/2_yolov4/b_yolov4_neck.ipynb
+++ b/2_yolov4/b_yolov4_neck.ipynb
@@ -3,14 +3,15 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7cecf208",
+   "id": "outstanding-allah",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "importing Jupyter notebook from a_csp_darknet53.ipynb\n"
+      "importing Jupyter notebook from a_csp_darknet53.ipynb\n",
+      "importing Jupyter notebook from z_layers.ipynb\n"
      ]
     }
    ],
@@ -22,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "09f2b609",
+   "id": "adult-answer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,34 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af7ba448",
-   "metadata": {},
-   "source": [
-    "### 定义CBL 基本模块"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "9eb83974",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def darknet_CBL(*args, **kwargs):\n",
-    "    \"\"\"Darknet Convolution2D followed by BatchNormalization and LeakyReLU.\"\"\"\n",
-    "    \n",
-    "    no_bias_kwargs = {'use_bias': False}  # 没懂为啥用 no_bias\n",
-    "    no_bias_kwargs.update(kwargs)\n",
-    "    return compose(\n",
-    "        DarknetConv2D(*args, **no_bias_kwargs),\n",
-    "        BatchNormalization(),\n",
-    "        LeakyReLU(alpha=0.1)\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8153cf91",
+   "id": "combined-trustee",
    "metadata": {},
    "source": [
     "### 定义 yolo neck\n",
@@ -77,134 +51,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ec9a72c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def yolov4_neck(inputs, num_anchors, num_classes):\n",
-    "    # 通过CSPdarknet_body 获得三个有效特征层\n",
-    "    feat1, feat2, feat3 = darknet_body(inputs)\n",
-    "    \n",
-    "    # p5  CBL*3\n",
-    "    P5 = darknet_CBL(512, (1, 1))(feat3)\n",
-    "    P5 = darknet_CBL(1024, (3, 3))(P5)\n",
-    "    P5 = darknet_CBL(512, (1, 1))(P5)\n",
-    "    # p5 使用了SPP结构，即不同尺度的最大池化后堆叠。\n",
-    "    maxpool1 = MaxPooling2D(pool_size=(13, 13), strides=(1, 1), padding='same')(P5)\n",
-    "    maxpool2 = MaxPooling2D(pool_size=(9, 9), strides=(1, 1), padding='same')(P5)\n",
-    "    maxpool3 = MaxPooling2D(pool_size=(5, 5), strides=(1, 1), padding='same')(P5)\n",
-    "    P5 = Concatenate()([maxpool1, maxpool2, maxpool3, P5])\n",
-    "    # p5  CBL*3\n",
-    "    P5 = darknet_CBL(512, (1, 1))(P5)\n",
-    "    P5 = darknet_CBL(1024, (3, 3))(P5)\n",
-    "    P5 = darknet_CBL(512, (1, 1))(P5)\n",
-    "    \n",
-    "    # p5 上采样与p4 实现 pan 结构，获得concatenate后的p4\n",
-    "    P5_upsample = compose(darknet_CBL(256, (1,1)), UpSampling2D(2))(P5)\n",
-    "    P4 = darknet_CBL(256, (1,1))(feat2)\n",
-    "    P4 = Concatenate()([P4, P5_upsample])\n",
-    "    \n",
-    "    # p4 CBL*5\n",
-    "    P4 = make_five_convs(P4,256)\n",
-    "    \n",
-    "    # p4 上采样与p3 实现 pan 结构，获得concatenate后的p3\n",
-    "    P4_upsample = compose(darknet_CBL(128, (1,1)), UpSampling2D(2))(P4)\n",
-    "    P3 = darknet_CBL(128, (1,1))(feat1)\n",
-    "    P3 = Concatenate()([P3, P4_upsample])\n",
-    "    # p3 CBL*5\n",
-    "    P3 = make_five_convs(P3,128)\n",
-    "    \n",
-    "    # ---------------------------------------------------------------------------------------------------------- #\n",
-    "    \n",
-    "    # p3 输出\n",
-    "    P3_output = darknet_CBL(256, (3,3))(P3)\n",
-    "    P3_output = DarknetConv2D(num_anchors*(num_classes+5), (1,1), kernel_initializer=keras.initializers.RandomNormal(mean=0.0, stddev=0.01))(P3_output)\n",
-    "\n",
-    "    # p3 下采样与 p4 实现 FPN，获得 concatenate 后的 p4\n",
-    "    P3_downsample = ZeroPadding2D(((1,0),(1,0)))(P3)\n",
-    "    P3_downsample = darknet_CBL(256, (3,3), strides=(2,2))(P3_downsample)\n",
-    "    P4 = Concatenate()([P3_downsample, P4])\n",
-    "    # p4 CBL*5\n",
-    "    P4 = make_five_convs(P4,256)\n",
-    "    # p4 输出\n",
-    "    P4_output = darknet_CBL(512, (3,3))(P4)\n",
-    "    P4_output = DarknetConv2D(num_anchors*(num_classes+5), (1,1), kernel_initializer=keras.initializers.RandomNormal(mean=0.0, stddev=0.01))(P4_output)\n",
-    "    \n",
-    "    \n",
-    "    # p4 下采样与 p5 实现 FPN，获得 concatenate 后的 p5\n",
-    "    P4_downsample = ZeroPadding2D(((1,0),(1,0)))(P4)\n",
-    "    P4_downsample = darknet_CBL(512, (3,3), strides=(2,2))(P4_downsample)\n",
-    "    P5 = Concatenate()([P4_downsample, P5])\n",
-    "    # p5 CBL*5\n",
-    "    P5 = make_five_convs(P5,512)\n",
-    "    # p5输出\n",
-    "    P5_output = darknet_CBL(1024, (3,3))(P5)\n",
-    "    P5_output = DarknetConv2D(num_anchors*(num_classes+5), (1,1), kernel_initializer=keras.initializers.RandomNormal(mean=0.0, stddev=0.01))(P5_output)\n",
-    "\n",
-    "    return Model(inputs, [P5_output, P4_output, P3_output])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
-   "id": "a51f3799",
+   "id": "industrial-credit",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def yolov4_neck(inputs_shapes):\n",
+    "def yolov4_neck(feature_maps, feature_channel_nums):\n",
     "    \"\"\"\n",
-    "    Implements the neck of YOLOv4, including the SPP and the modified PAN.\n",
-    "\n",
-    "    Args:\n",
-    "        input_shapes (List[Tuple[int]]): List of 3 tuples, which are the output shapes of the backbone.\n",
-    "            For CSPDarknet53, those are: [(52, 52, 256), (26, 26, 512), (13, 13, 1024)] for a (416, 416) input.\n",
-    "\n",
-    "    Returns:\n",
-    "        tf.keras.Model: Neck model\n",
     "    \"\"\"\n",
-    "    input_1 = tf.keras.Input(shape=filter(None, input_shapes[0]))  # 52* 52* 256\n",
-    "    input_2 = tf.keras.Input(shape=filter(None, input_shapes[1]))  # 26* 26* 512\n",
-    "    input_3 = tf.keras.Input(shape=filter(None, input_shapes[2]))  # 13* 13* 1024\n",
+    "    f1, f2, f3 = feature_maps # (f1:19x19|f2:38*38|f3:76*76 for input input)\n",
+    "    f1_channel_num, f2_channel_num, f3_channel_num = feature_channel_nums\n",
     "    \n",
-    "    # p5  CBL*3\n",
-    "    P5 = darknet_CBL(512, (1, 1))(input_3)\n",
-    "    P5 = darknet_CBL(1024, (3, 3))(P5)\n",
-    "    P5 = darknet_CBL(512, (1, 1))(P5)\n",
-    "    # p5 使用了SPP结构，即不同尺度的最大池化后堆叠。\n",
-    "    maxpool1 = MaxPooling2D(pool_size=(13, 13), strides=(1, 1), padding='same')(P5)\n",
-    "    maxpool2 = MaxPooling2D(pool_size=(9, 9), strides=(1, 1), padding='same')(P5)\n",
-    "    maxpool3 = MaxPooling2D(pool_size=(5, 5), strides=(1, 1), padding='same')(P5)\n",
-    "    ssp = Concatenate()([maxpool1, maxpool2, maxpool3, P5])\n",
-    "    # p5  CBL*3\n",
-    "    P5 = darknet_CBL(512, (1, 1))(ssp)\n",
-    "    P5 = darknet_CBL(1024, (3, 3))(P5)\n",
-    "    output_3 = darknet_CBL(512, (1, 1))(P5)  # 13* 13* 512\n",
+    "    # feature map 1(19x19 for 608 input)\n",
+    "    x1 = make_three_darknet_CBL(f1, f1_channel_num//2)\n",
+    "    x1 = Spp(x1)\n",
+    "    x1 = make_three_darknet_CBL(x1, f1_channel_num//2)\n",
+    "    x1_upsample = compose(\n",
+    "        Darknet_CBL(f2_channel_num//2,(1,1)),\n",
+    "        UpSampling2D(2))(x1)\n",
     "    \n",
-    "    # output_3 上采样与p4 实现 pan 结构，获得concatenate后的p4\n",
-    "    P5_upsample = compose(darknet_CBL(256, (1,1)), UpSampling2D(2))(output_3)\n",
-    "    P4 = darknet_CBL(256, (1,1))(input_2)\n",
-    "    P4 = Concatenate()([P4, P5_upsample])\n",
+    "    x2 = Darknet_CBL(f2_channel_num//2,(1,1))(f2)\n",
+    "    x2 = Concatenate()([x2, x1_upsample])\n",
     "    \n",
-    "    # p4 CBL*5\n",
-    "    output_2 = make_five_convs(P4,256)  # 26* 26* 256\n",
+    "    # After concatenate: feature map 2(38x38 for 608 input)\n",
+    "    x2 = make_five_darknet_CBL(x2, f2_channel_num//2)\n",
+    "    x2_upsample = compose(\n",
+    "        Darknet_CBL(f3_channel_num//2,(1,1)),\n",
+    "        UpSampling2D(2))(x1)\n",
     "    \n",
-    "    # output_2 上采样与p3 实现 pan 结构，获得concatenate后的p3\n",
-    "    P4_upsample = compose(darknet_CBL(128, (1,1)), UpSampling2D(2))(output_2)\n",
-    "    P3 = darknet_CBL(128, (1,1))(input_1)\n",
-    "    P3 = Concatenate()([P3, P4_upsample])\n",
-    "    # p3 CBL*5\n",
-    "    output_1 = make_five_convs(P3,128)  # 52* 52* 128\n",
+    "    x3 = Darknet_CBL(f3_channel_num//2,(1,1))(f3)\n",
+    "    x3 = Concatenate()([x3, x2_upsample])\n",
     "    \n",
-    "    return tf.keras.Model(\n",
-    "        [input_1, input_2, input_3], [output_1, output_2, output_3], name=\"YOLOv4_neck\"\n",
-    "    )"
+    "    # After concatenate: feature map 3(76x76 for 608 input)\n",
+    "    x3 = make_five_darknet_CBL(x3, f3_channel_num//2)\n",
+    "    \n",
+    "    # ----------------------------------------------------------------------------\n",
+    "    \n",
+    "    # output (76x76 for 608 input)\n",
+    "    y3 = compose(\n",
+    "        Darknet_CBL(f3_channel_num//2,(1,1)),\n",
+    "        Darknet_Conv2D(num_anchors*(num_classes+5), (1,1), name='predict_conv_3'))(x3)\n",
+    "    \n",
+    "    # downsample fpn merge for feature map 3 & 2\n",
+    "    x3_downsample = compose(\n",
+    "        ZeroPadding2D(((1,0),(1,0))),\n",
+    "        Darknet_CBL(f2_channel_num//2, (3,3), strides=(2,2)))(x3)\n",
+    "    x2 = Concatenate()([x3_downsample, x2])\n",
+    "    x2 = make_five_darknet_CBL(x2, f2_channel_num//2)\n",
+    "    \n",
+    "    # output (38x38 for 608 input)\n",
+    "    y2 = compose(\n",
+    "        Darknet_CBL(f2_channel_num//2,(1,1)),\n",
+    "        Darknet_Conv2D(num_anchors*(num_classes+5), (1,1), name='predict_conv_2'))(x2)\n",
+    "    \n",
+    "    # downsample fpn merge for feature map 2 & 1\n",
+    "    x2_downsample = compose(\n",
+    "            ZeroPadding2D(((1,0),(1,0))),\n",
+    "            Darknet_CBL(f1_channel_num//2, (3,3), strides=(2,2)))(x2)\n",
+    "    x1 = Concatenate()([x2_downsample, x1])\n",
+    "    x1 = make_yolo_head(x1, f1_channel_num//2)\n",
+    "    \n",
+    "    # output (19x19 for 608 input)\n",
+    "    y1 = compose(\n",
+    "        Darknet_CBL(f1_channel_num, (3,3)),\n",
+    "        Darknet_Conv2D(num_anchors*(num_classes+5), (1,1), name='predict_conv_1'))(x1)\n",
+    "    \n",
+    "    return y1, y2, y3"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f225fd69",
+   "id": "broad-invasion",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -226,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
