--- a/2_yolov4/c_yolov4_head.ipynb
+++ b/2_yolov4/c_yolov4_head.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "deluxe-semester",
+   "id": "014b2743",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "elementary-closure",
+   "execution_count": 2,
+   "id": "7b422dba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,12 +29,14 @@
     "                                     Conv2D, LeakyReLU, MaxPooling2D,Reshape,\n",
     "                                     UpSampling2D, ZeroPadding2D)\n",
     "from tensorflow.keras.models import Model\n",
-    "from tensorflow.keras.regularizers import l2"
+    "from tensorflow.keras.regularizers import l2\n",
+    "\n",
+    "from scipy.special import expit, softmax"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "earned-flood",
+   "id": "bdf1c7d3",
    "metadata": {},
    "source": [
     "**先验框**\n",
@@ -86,62 +88,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "interested-header",
+   "execution_count": 1,
+   "id": "4144fdb4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def yolov3_boxes_regression(feats_per_stage, anchors_per_stage):\n",
-    "    \"\"\"\n",
-    "    解码检测框、检测置信度和类别\n",
+    "def yolo_decode(prediction, anchors, num_classes, input_dims, scale_x_y=None, use_softmax=False):\n",
+    "    \"\"\"Decode final layer features to bounding box parameters\n",
     "    \n",
     "    Args:\n",
-    "        feats_per_stage (tf.Tensor): 5D(N, grid_x, grid_y, num_anchors_per_stage, 4+1+num_classes).\n",
-    "            The last dimension consists in (x, y, w, h, obj, ...classes)\n",
-    "        anchors_per_stage (numpy.array[int,2]): List of 3 numpy arrays containing the anchor used for each stage.\n",
-    "            The first and second columns respectively contain the anchors width and height.\n",
-    "            (int): Maximum number of boxes predicted on each image (across all anchors/stages)\n",
-    "            \n",
-    "    Returns:\n",
-    "        List[tf.Tensor]: 4 Tensors respectively describing\n",
-    "        bbox (N, grid_x, grid_y, num_anchors,4),\n",
-    "        objectness (N,grid_x,grid_y,num_anchors,1),\n",
-    "        class_probs (N,grid_x,grid_y,num_anchors,num_classes),\n",
+    "        prediction: feature layers([batch_size, grid_size, grid_size, num_anchors*(num_classes+5)])\n",
     "    \"\"\"\n",
-    "    # 假设输入的feats_per_stage为(N, 13, 13, 3, 85)\n",
-    "    grid_size_x, grid_size_y = feats_per_stage.shape[1], feats_per_stage.shape[2]  # 此时 grid_size_x = grid_size_y =13\n",
-    "    num_classes = feats_per_stage.shape[-1] - 5  # num_classes = 85-5 = 80\n",
+    "    num_anchors = len(anchors)\n",
+    "    batch_size = np.shape(prediction)[0]\n",
+    "    grid_size = np.shaoe(prediction)[1:3]\n",
+    "    # check if stride on height & width are same\n",
+    "    assert input_dims[0]//grid_size[0] == input_dims[1] // grid_size[1], 'model stride mismatch'\n",
+    "    stride = input_dims[0] // grid_size[0]\n",
     "    \n",
-    "    box_xy, box_wh, objectness, class_probs = tf.split(\n",
-    "        feats_per_stage, (2,2,1,num_classes), axis = -1\n",
-    "    )  # box_xy = 85[0:2], box_wh =85[2:4], objectness = 85[4], class_probs=85[5:]\n",
+    "    prediction = np.reshape(prediction,\n",
+    "                           (batch_size, grid_size[0]*grid_size[1]*num_anchors, num_classes+5))\n",
     "    \n",
-    "    box_xy = tf.sigmoid(box_xy)  # yolov3 中三块的激活函数都是使用sigmoid\n",
-    "    # 1、置信度解码\n",
-    "    objectness = tf.sigmoid(objectness)   # (N, 13, 13, 3, 1)\n",
-    "    # 2、类别解码\n",
-    "    class_probs = tf.sigmoid(class_probs)  # (N, 13, 13, 3, 80)\n",
+    "    # ----------------------------------------------------------------------------------------------------------\n",
+    "    # generate x_y_offset grid map\n",
+    "    grid_y = np.arange(grid_size[0])\n",
+    "    grid_x = np.arange(grid_size[1])\n",
+    "    x_offset, y_offset = np.meshgrid(grid_x, grid_y)\n",
     "    \n",
-    "    # 3、检测框解码\n",
-    "    grid = tf.meshgrid(tf.range(grid_size_y), tf.range(grid_size_x))\n",
-    "    grid = tf.expand_dim(tf.stack(grid, axis=-1), axis=2)  # [gy, gx, 1, 2]\n",
+    "    x_offset = np.reshape(x_offset, (-1, 1))\n",
+    "    y_offset = np.reshape(y_offset, (-1, 1))\n",
     "    \n",
-    "    box_xy = (box_xy + tf.cast(grid, tf.float32)) / tf.constant(\n",
-    "        [grid_size_y, grid_size_x], dtype=tf.float32\n",
-    "    )\n",
-    "    box_wh = tf.exp(box_wh) * anchors_per_stage\n",
-    "\n",
-    "    box_x1y1 = box_xy - box_wh / 2\n",
-    "    box_x2y2 = box_xy + box_wh / 2\n",
-    "    bbox = tf.concat([box_x1y1, box_x2y2], axis=-1)  # (N, 13, 13, 3, 4)\n",
+    "    x_y_offset = np.concatenate((x_offset, y_offset), axis=1)\n",
+    "    x_y_offset = np.tile(x_y_offset, (1, num_anchors)) # 扩充至三倍\n",
+    "    x_y_offset = np.reshape(x_y_offset, (-1, 2))  # 整形成行数增加\n",
+    "    x_y_offset = np.expand_dims(x_y_offset, 0)\n",
     "    \n",
-    "    return bbox, objectness, class_probs"
+    "    # ----------------------------------------------------------------------------------------------------------\n",
+    "    anchors = np.tile(anchors, (grid_size[0] * grid_size[1], 1))\n",
+    "    anchors = np.expand_dims(anchors, 0)\n",
+    "    \n",
+    "    # 检测框解码\n",
+    "    if scale_x_y:\n",
+    "        # Eliminate grid sensitivity trick involved in YOLOv4\n",
+    "        # https://zhuanlan.zhihu.com/p/139724869\n",
+    "        box_xy_tmp = expit(prediction[..., :2]) * scale_x_y - (scale_x_y - 1) / 2\n",
+    "        box_xy = (box_xy_tmp + x_y_offset) / np.arange(grid_size)[::-1]\n",
+    "    else:\n",
+    "        box_xy = (expit(prediction[..., :2]) + x_y_offset) / np.array(grid_size)[::-1]\n",
+    "    box_wh = (np.exp(prediction[..., 2:4]) * anchors) / np.array(input_dims)[::-1]\n",
+    "    \n",
+    "    # ----------------------------------------------------------------------------------------------------------\n",
+    "    # sigmoid objectness scores 置信度解码\n",
+    "    objectness = expit(prediction[..., 4])  # p_o (objectness score)\n",
+    "    objectness = np.expand_dims(objectness, -1)  # To make the same number of values for axis 0 and 1\n",
+    "    \n",
+    "    # ----------------------------------------------------------------------------------------------------------\n",
+    "    # class scores 类别解码\n",
+    "    if use_softmax:\n",
+    "        class_scores = softmax(prediction[..., 5:], axis=-1)\n",
+    "    else:\n",
+    "        class_scores = explit(prediction[..., 5:])\n",
+    "    \n",
+    "    # (batch_size, grid_size[0]*grid_size[1]*num_anchors, ...))\n",
+    "    return np.concatenate([box_xy, box_wh, objectness, class_scores], axis=2)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "8f61f1f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def yolo_handle_predictions(predictions, image_shape, max_boxes=100, confidence=0.1, iou_threshold=0.4, use_cluster_nms=False, use_wbf=False):\n",
+    "    # 假设predictions尺寸为 [16, 16*16*3, 85] = [16, 768, 85]\n",
+    "    boxes = predictions[:, :, :4]  # [16, 768, 4]\n",
+    "    box_confidences = np.expand_dims(predictions[:, :, 4], -1)  # [16, 768, 1]\n",
+    "    box_class_probs = predictions[:, :, 5:]  # [16, 768, 80]\n",
+    "    \n",
+    "    # filter boxes with confidence threshold\n",
+    "    box_scores = box_confidences * box_class_probs # [16, 768, 80]\n",
+    "    box_classes = np.argmax(box_scores, axis=-1)  # [16, 768]\n",
+    "    box_class_scores = np.max(box_scores, axis=-1)  # [16, 768]\n",
+    "    pos = np.where(box_class_scores >= confidence)  # [2, number<16*768]\n",
+    "    \n",
+    "    # 通过位置得到大于置信度的框、类别和分数\n",
+    "    boxes = boxes[pos]  # [number, 4]\n",
+    "    classes = box_classes[pos]  # [number, ]\n",
+    "    scores = box_class_scores[pos]  # [number, ]\n",
+    "    \n",
+    "    if use_cluster_nms:\n",
+    "        # use Fast/Cluster NMS for boxes postprocess\n",
+    "        n_boxes, n_classes, n_scores = fast_cluster_nms_boxes(boxes, classes, scores, iou_threshold, confidence=confidence)\n",
+    "    elif use_wbf:\n",
+    "        # use Weighted-Boxes-Fusion for boxes postprocess\n",
+    "        n_boxes, n_classes, n_scores = weighted_boxes_fusion([boxes], [classes], [scores], image_shape, weights=None, iou_thr=iou_threshold)\n",
+    "    else:\n",
+    "        # Boxes, Classes and Scores returned from NMS\n",
+    "        n_boxes, n_classes, n_scores = nms_boxes(boxes, classes, scores, iou_threshold, confidence=confidence)\n",
+    "\n",
+    "    if n_boxes:\n",
+    "        boxes = np.concatenate(n_boxes)\n",
+    "        classes = np.concatenate(n_classes).astype('int32')\n",
+    "        scores = np.concatenate(n_scores)\n",
+    "        boxes, classes, scores = filter_boxes(boxes, classes, scores, max_boxes)\n",
+    "\n",
+    "        return boxes, classes, scores\n",
+    "\n",
+    "    else:\n",
+    "        return [], [], []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a03802bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nms_boxes(boxes, classes, scores, iou_threshold, confidence=0.1, use_diou=True, is_soft=False, use_exp=False, sigma=0.5):\n",
+    "    # boxes: [number, 4]、classes:[number, ]、scores:[number, ]\n",
+    "    nboxes, nclasses, nscores = [], [], []\n",
+    "    \n",
+    "    for c in set(classes):\n",
+    "        # handle data for one class\n",
+    "        inds = np.where(classes == c)\n",
+    "        b = boxes[inds]  # [len(inds), 4]\n",
+    "        c = classes[inds]  # [len(inds), ]\n",
+    "        s = scores[inds]  # [len(inds), ]\n",
+    "        \n",
+    "        # make a data copy to avoid breaking\n",
+    "        # during nms operation\n",
+    "        b_nms = copy.deepcopy(b)\n",
+    "        c_nms = copy.deepcopy(c)\n",
+    "        s_nms = copy.deepcopy(s)\n",
+    "        \n",
+    "        while len(s_nms) > 0:\n",
+    "            # 获取这一类中分数最高值\n",
+    "            i = np.argmax(s_nms, axis=-1)\n",
+    "            nboxes.append(copy.deepcopy(b_nms[i]))\n",
+    "            nclasses.append(copy.deepcopy(c_nms[i]))\n",
+    "            nscores.append(copy.deepcopy(s_nms[i]))\n",
+    "            \n",
+    "            # 交换最大一行和第一行，方便nms\n",
+    "            b_nms[[i,0],:] = b_nms[[0,i],:]\n",
+    "            c_nms[[i,0]] = c_nms[[0,i]]\n",
+    "            s_nms[[i,0]] = s_nms[[0,i]]\n",
+    "            \n",
+    "            if use_diou:\n",
+    "                iou = box_diou(b_nms)\n",
+    "            else:\n",
+    "                iou = box_iou(b_nms)\n",
+    "                \n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5390223f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "985e27e3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6519ca1f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11c962f1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
-   "id": "dominant-commander",
+   "id": "d8a52a77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "agricultural-subscription",
+   "id": "f4f04ba6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "coordinate-contract",
+   "id": "133c23b0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -326,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
