--- a/2_yolov4/ious.ipynb
+++ b/2_yolov4/ious.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d133a9fd",
+   "id": "a024cd1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "23d4ff2c",
+   "id": "819ddd52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,10 +75,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c28321e",
+   "id": "bb3e19fd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def box_iou(boxes):\n",
+    "    \"\"\"\n",
+    "    Calculate IoU value of 1st box with other boxes of a box array\n",
+    "    \n",
+    "    Args:\n",
+    "    boxes: bbox numpy array, shape=(N, 4), xywh\n",
+    "                   x,y are top left coordinates\n",
+    "                   \n",
+    "    Retures:\n",
+    "    diou: numpy array, shape(N-1,)\n",
+    "                IoU value of boxes[1: ] with boxes[0]\n",
+    "    \"\"\"\n",
+    "    # get box coordinate and area\n",
+    "    x = boxes[:, 0]\n",
+    "    y = boxes[:, 1]\n",
+    "    w = boxes[:, 2]\n",
+    "    h = boxes[:, 3]\n",
+    "    areas = w * h"
+   ]
   }
  ],
  "metadata": {
