--- a/nodes/20210405_目标检测-YOLO系列.md
+++ b/nodes/20210405_目标检测-YOLO系列.md
@@ -964,7 +964,15 @@ anchor box其实就是从训练集的所有ground truth box中统计(使用k-mea
 1. YOLO的对象类别概率中没有background一项，也不需要，因为对background的预测已经交给置信度了，所以它的输出是有条件的，那就是在置信度表示当前box有对象的前提下，所以条件概率的数学形式为 P_r(class_i|Object)
 2. 分类模型中最后输出之前使用softmax求出每个类别的概率，也就是说各个类别之间是互斥的，而YOLOv3算法的每个类别概率是单独用逻辑回归函数(sigmoid函数)计算得出了，所以每个类别不必是互斥的，也就是说一个对象可以被预测出多个类别。
 
+##  8.4 Eliminate grid sensitivity 消除网格敏感度
 
+> https://zhuanlan.zhihu.com/p/139724869
 
+YOLOv3中，预测框中心点坐标的计算方法是 ![[公式]](https://www.zhihu.com/equation?tex=b_%7Bx%7D%3D%5Csigma%28t_%7Bx%7D%29%2Bc_%7Bx%7D) 。鉴于 ![[公式]](https://www.zhihu.com/equation?tex=%5Csigma%28%29) 函数的特点， ![[公式]](https://www.zhihu.com/equation?tex=b_%7Bx%7D) 很难取到![[公式]](https://www.zhihu.com/equation?tex=c_%7Bx%7D) 或者 ![[公式]](https://www.zhihu.com/equation?tex=c_%7Bx%7D%2B1)。 其现象就是预测框的中心位置不会落在grid boundary。YOLOv4的解决办法是
 
+![[公式]](https://www.zhihu.com/equation?tex=b_%7Bx%7D%3D%5Calpha%5Csigma%28t_%7Bx%7D%29-%28%5Calpha-1%29%2F2%2Bc_%7Bx%7D)
+
+就是cfg文件中的scale_x_y。实现代码见yolo_layer.c::forward_yolo_layer()，通过scal_add_cpu实现。
+
+更详细的讨论请参考[#3293](https://link.zhihu.com/?target=https%3A//github.com/AlexeyAB/darknet/issues/3293)
 
